php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #14934 type property not set in comment nodes
Submitted: 2002-01-08 15:17 UTC Modified: 2002-01-25 02:39 UTC
Votes:1
Avg. Score:4.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:0 (0.0%)
From: jtate at mi-corporation dot com Assigned:
Status: Closed Package: DOM XML related
PHP Version: 4.1.1 OS: Linux 2.4.9-RH 7.2
Private report: No CVE-ID: None
 [2002-01-08 15:17 UTC] jtate at mi-corporation dot com
The domxml_node->type property is not set for nodes of type XML_COMMENT_NODE.  The following patch fixes the problem.

--- ext/domxml/php_domxml.c.orig        Tue Jan  8 15:09:30 2002
+++ ext/domxml/php_domxml.c     Tue Jan  8 15:10:12 2002
@@ -819,6 +819,7 @@
                        rsrc_type = le_domxmlcommentp;
                        content = xmlNodeGetContent(nodep);
                        if (content)
+                                add_property_long(wrapper, "type", Z_TYPE_P(nodep
));
                                add_property_stringl(wrapper, "content", (char *)
content, strlen(content), 1);
                        break;
                }


Please e-mail if you wish more information.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-01-24 14:36 UTC] jtate at mi-corporation dot com
Is anyone going to do anything about this?  If not could I get CVS commit access so that I can make the change myself?
 [2002-01-25 02:39 UTC] derick@php.net
Fixed in CVS, thx
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 04 00:00:02 2026 UTC