- Fix for bug #14934: type property not set in comment nodes (domxml)